--- a/src/output.css
+++ b/src/output.css
@@ -609,6 +609,14 @@ video {
   margin-bottom: 6rem;
 }
 
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
+.mt-4 {
+  margin-top: 1rem;
+}
+
 .block {
   display: block;
 }
